--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,6 @@ monitor_filters=esp32_exception_decoder
 lib_deps = 
     bblanchon/ArduinoJson @ ^6.16.1
 	knolleary/PubSubClient@^2.8.0
+    adafruit/Adafruit SSD1306@^2.5.13
+	adafruit/Adafruit GFX Library@^1.11.11
 ; build_type = debug
