--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,10 @@
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
+extra_scripts = pre:extra_script.py
 framework = arduino
 monitor_speed = 115200
-build_flags = -Ofast
+build_flags = -D CLANG_TIDY
 monitor_filters=esp32_exception_decoder
 lib_deps = 
     bblanchon/ArduinoJson @ ^6.16.1
